--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.2",
+    "@react-navigation/stack": "^6.3.11",
+    "@realm/react": "^0.4.1",
     "expo": "~47.0.12",
+    "expo-auth-session": "~3.8.0",
+    "expo-random": "~13.0.0",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.15.0",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "realm": "^11.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
