--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.15.0",
     "react": "18.1.0",
-    "react-native": "0.70.5",
-    "realm": "^11.3.1"
+    "react-native": "0.70.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
