--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.4.5",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/stack": "^6.3.11",
@@ -20,7 +21,11 @@
     "firebase": "^9.15.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "styled-components": "^5.3.6"
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-safe-area-context": "4.4.1",
+    "styled-components": "^5.3.6",
+    "react-native-reanimated": "~2.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
