feat: list and display cardlist in real time

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -280,6 +280,7 @@ dependencies {
 
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation project(path: ":@react-native-firebase_database")
 
     def isGifEnabled = (findProperty('expo.gif.enabled') ?: "") == "true";
     def isWebpEnabled = (findProperty('expo.webp.enabled') ?: "") == "true";
