--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "react-native": "0.70.8",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
+    "react-native-svg": "^13.9.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
