--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.15.0",
+    "lottie-react-native": "^5.1.6",
     "react": "18.1.0",
     "react-native": "0.70.8",
     "react-native-gesture-handler": "~2.8.0",
