--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "lottie-react-native": "^5.1.6",
     "react": "18.1.0",
     "react-native": "0.70.8",
+    "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-permissions": "^3.8.1",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
