--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "react-native-gesture-handler": "~2.8.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-qrcode-svg": "^6.2.0",
-    "react-native-reanimated": "~2.12.0",
+    "react-native-reanimated": "2.10.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-svg": "^13.9.0",
-    "styled-components": "^5.3.6"
+    "react-native-vision-camera": "^2.15.4",
+    "styled-components": "^5.3.6",
+    "vision-camera-code-scanner": "^0.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
