--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "build-apk": "node ./build.js"
+    "build-apk": "node ./apk-build.js"
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.4.5",
